--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "./node_modules/gts/"
+  "extends": "./node_modules/gts/",
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["simple-import-sort"],
+  "rules": {
+    "simple-import-sort/imports": "error",
+    "simple-import-sort/exports": "error"
+  }
 }
