--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.10",
+    "dayjs": "^1.10.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "socket.io-client": "4.1.3",
-    "web-vitals": "^1.0.1"
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,9 +46,11 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^14.11.2",
+    "@types/node": "^16.4.12",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "@types/uuid": "^8.3.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "gts": "^3.1.0",
     "typescript": "^4.0.3"
   }
